out/generated/k8s/canary.networkpolicy.yaml
# Generated by `membrane gen` from registry/agents. Do not edit by hand.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    membrane.io/manifest-sha256: 8560be3e297e969b9cdb433074734d3f7b63a1c114e58efc14e3c870b4489307
  labels:
    app.kubernetes.io/managed-by: membrane
    membrane.io/agent-id: canary
  name: membrane-canary-egress
  namespace: membrane-system
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  podSelector:
    matchExpressions:
    - key: membrane.io/quarantine
      operator: NotIn
      values:
      - 'true'
    matchLabels:
      membrane.io/agent-id: canary
  policyTypes:
  - Egress
