out/generated/k8s/code-runner.cilium-egress.yaml
# Generated by `membrane gen` from registry/agents. Do not edit by hand.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    membrane.io/manifest-sha256: c66b040b5bc10e52d9a43ba59e78984abb0c05477cd7dd85f0559beb9c0cf3e9
  labels:
    app.kubernetes.io/managed-by: membrane
    membrane.io/agent-id: code-runner
  name: membrane-code-runner-fqdn
  namespace: agents-sandbox
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: ANY
      rules:
        dns:
        - matchPattern: files.pythonhosted.org
        - matchPattern: files.pythonhosted.org.agents-sandbox.svc.cluster.local
        - matchPattern: files.pythonhosted.org.cluster.local
        - matchPattern: files.pythonhosted.org.svc.cluster.local
        - matchPattern: pypi.org
        - matchPattern: pypi.org.agents-sandbox.svc.cluster.local
        - matchPattern: pypi.org.cluster.local
        - matchPattern: pypi.org.svc.cluster.local
  - toFQDNs:
    - matchName: files.pythonhosted.org
    - matchName: pypi.org
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
  endpointSelector:
    matchExpressions:
    - key: membrane.io/quarantine
      operator: NotIn
      values:
      - 'true'
    matchLabels:
      membrane.io/agent-id: code-runner
