out/generated/k8s/invoice-reconciler.networkpolicy.yaml
# Generated by `membrane gen` from registry/agents. Do not edit by hand.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    membrane.io/manifest-sha256: 4cc66320962fcb4d949a49a77acbdf20cf0506ecfd5d9b9d750b7b60361b3a18
  labels:
    app.kubernetes.io/managed-by: membrane
    membrane.io/agent-id: invoice-reconciler
  name: membrane-invoice-reconciler-egress
  namespace: agents-finance
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  podSelector:
    matchExpressions:
    - key: membrane.io/quarantine
      operator: NotIn
      values:
      - 'true'
    matchLabels:
      membrane.io/agent-id: invoice-reconciler
  policyTypes:
  - Egress
